comments from FNAL

--- a/wsc16paper.bib
+++ b/wsc16paper.bib
@@ -1,5 +1,5 @@
 @article{1748-0221-3-08-S08001,
-  author={Lyndon Evans and Philip Bryant},
+  author={Evans, L. and Bryant, P.},
   title={LHC Machine},
   journal={Journal of Instrumentation},
   volume={3},
@@ -32,7 +32,7 @@
   abstract={The increased energy and luminosity of the LHC in the run-2 data taking period requires a more selective trigger menu in order to satisfy the physics goals of ATLAS. Therefore the electronics of the central trigger system is upgraded to allow for a larger variety and more sophisticated trigger criteria. In addition, the software controlling the central trigger processor (CTP) has been redesigned to allow the CTP to accommodate three freely configurable and separately operating sets of sub detectors, each independently using the almost full functionality of the trigger hardware. This new approach and its operational advantages are discussed as well as the hardware upgrades.}
 }
 @techreport{Bawej:1711011,
-      author        = "Bawej, Tomasz Adrian et. al.",
+      author        = "Bawej, T. et. al.",
       title         = "{The New CMS DAQ System for Run 2 of the LHC}",
       institution   = "CERN",
       address       = "Geneva",
@@ -48,7 +48,7 @@
 }
 @article{Bird:2005js,
       author         = "Bird, I. and Bos, K. and Brook, N. and Duellmann, D. and
-                        Eck, C. and others",
+                        Eck, C. et. al.",
       editor         = "Bird, I.",
       title          = "{LHC computing Grid. Technical design report}",
       year           = "2005",
@@ -56,7 +56,7 @@
       SLACcitation   = "%%CITATION = CERN-LHCC-2005-024 ETC.;%%",
 }
 @inproceedings{Sfiligoi:2009:PWG:1579192.1579413,
- author = {Sfiligoi, Igor and Bradley, Daniel C. and Holzman, Burt and Mhashilkar, Parag and Padhi, Sanjay and Wurthwein, Frank},
+ author = {Sfiligoi, I. and Bradley, D. and Holzman, B. and Mhashilkar, P. and Padhi, S. and Wurthwein, F.},
  title = {The Pilot Way to Grid Resources Using glideinWMS},
  booktitle = {Proceedings of the 2009 WRI World Congress on Computer Science and Information Engineering - Volume 02},
  series = {CSIE '09},
@@ -72,7 +72,7 @@
  keywords = {glideinWMS, Condor, Virtual Private Computing Pools, Grid computing},
 } 
 @article{condor-practice, 
-  author    = "Douglas Thain and Todd Tannenbaum and Miron Livny",
+  author    = "Thain. D. and Tannenbaum, T. and Livny, M.",
   title     = "Distributed computing in practice: the Condor experience.",
   journal   = "Concurrency - Practice and Experience",
   volume    = "17",
@@ -82,8 +82,7 @@
 }
 @article{Blum:2013mhx,
        author         = "Blum, T. and Van de Water, R.S. and Holmgren,
-D. and
-                         Brower, R. and Catterall, S. and others",
+D. and Brower, R. and Catterall, S. et. al.",
        title          = "{Working Group Report: Lattice Field Theory}",
        year           = "2013",
        eprint         = "1310.6087",
@@ -93,8 +92,7 @@ D. and
        SLACcitation   = "%%CITATION = ARXIV:1310.6087;%%",
 }
 @article{Amundson:2014rqa,
-      author         = "Amundson, James and Macridin, Alexandru and Spentzouris,
-                        Panagiotis",
+      author         = "Amundson, J. and Macridin, A. and Spentzouris, P.",
       title          = "{High Performance Computing Modeling Advances Accelerator
                         Science for High Energy Physics}",
       journal        = "IEEE Comput.Sci.Eng.",
@@ -107,7 +105,7 @@ D. and
       SLACcitation   = "%%CITATION = ISCEE,16,32;%%",
 }
 @article{Chatrchyan:2012ufa,
-      author         = "Chatrchyan, Serguei and others",
+      author         = "Chatrchyan, S. et. al.",
       title          = "{Observation of a new boson at a mass of 125 GeV with the
                         CMS experiment at the LHC}",
       collaboration  = "CMS",
@@ -127,8 +125,7 @@ D. and
   howpublished = {\url{http://ucsdnews.ucsd.edu/pressrelease/sdscs_gordon_supercomputer_assists_in_crunching_large_hadron_collider_data}},
 }
 @Article{alpgen,
-     author    = "Mangano, Michelangelo L. and Moretti, Mauro and Piccinini,
-                  Fulvio and Pittau, Roberto and Polosa, Antonio D.",
+     author    = "Mangano, M. and Moretti, M. and Piccinini, F. and Pittau, R. and Polosa, A.",
      title     = "{ALPGEN, a generator for hard multiparton processes in
                   hadronic  collisions}",
      journal   = "JHEP",
@@ -147,9 +144,7 @@ D. and
  year = {2015},
 }
 @article{1742-6596-78-1-012057,
-  author={Ruth Pordes and Don Petravick and Bill Kramer and Doug Olson and Miron Livny and Alain Roy and Paul Avery and Kent
-Blackburn and Torre Wenaus and Frank Würthwein and Ian Foster and Rob Gardner and Mike Wilde and Alan Blatecky and John
-McGee and Rob Quick},
+  author={Pordes. R. et. al.},
   title={The Open Science Grid},
   journal={Journal of Physics: Conference Series},
   volume={78},
@@ -169,27 +164,26 @@ title={The European Grid Initiative (EGI)},
 url={http://dx.doi.org/10.1007/978-1-4419-5597-5_6},
 publisher={Springer US},
 keywords={Grid computing; Grid technologies; e-Infrastructures; Sustainability; European grid infrastructure; National grid initiatives},
-author={Kranzlmüller, D. and de Lucas, J.Marco and Öster, P.},
+author={Kranzlmüller, D. and de Lucas, J. and Öster, P.},
 pages={61-66},
 language={English}
 }
 @inproceedings{CHEP2015:FermiCloud,
- author = {Timm, S. and Garzoglio, G. and others},
+ author = {Timm, S. and Garzoglio, G. et. al.},
  title = {Cloud services for the Fermilab scientific stakeholders},
  booktitle = {21st International Conference on Computing in High Energy and Nuclear Physics (CHEP2015)},
  url = {https://indico.cern.ch/event/304944/session/7/contribution/448},
  year = {2015},
 }
 @inproceedings{CHEP2015:CloudAtlas,
- author = {Taylor, R and others},
+ author = {Taylor, R. et. al.},
  title = {Evolution of Cloud Computing in ATLAS},
  booktitle = {21st International Conference on Computing in High Energy and Nuclear Physics (CHEP2015)},
  url = {https://indico.cern.ch/event/304944/session/7/contribution/146},
  year = {2015},
 }
 @article{1742-6596-368-1-012011,
-  author={Jan Balewski and Jerome Lauret and Doug Olson and Iwona Sakrejda and Dmitry Arkhipkin and John Bresnahan and Kate
-Keahey and Jeff Porter and Justin Stevens and Matt Walker},
+  author={Balewski J. et. al.},
   title={Offloading peak processing to virtual farm by STAR experiment at RHIC},
   journal={Journal of Physics: Conference Series},
   volume={368},
@@ -200,28 +194,28 @@ Keahey and Jeff Porter and Justin Stevens and Matt Walker},
   abstract={The Virtual Machine framework was used to assemble the STAR-computing environment, validated once, deployed on over 100 8-core VMs at NERSC and Argonne National Lab, and used as a homogeneous Virtual Farm processing events acquired in real time by STAR detector located at Brookhaven National Lab. To provide time dependent calibration, a database snapshot scheme was devised. The two high capacity filesystems, localized at the opposite coasts of US and interconnected via Globus-Online protocol, were used in this setup, which resulted with a highly scalable Cloud-based extension of STAR computing resources. The system was in continuous operation for over 3 months.}
 }
 @inproceedings{CHEP2015:CloudCMS,
- author = {Colling, D. and others},
+ author = {Colling, D. et. al.},
  title = {The diverse use of clouds by CMS},
  booktitle = {21st International Conference on Computing in High Energy and Nuclear Physics (CHEP2015)},
  url = {https://indico.cern.ch/event/304944/session/7/contribution/230},
  year = {2015},
 }
 @inproceedings{CHEP2015:SAMTrain,
- author = {Mengel, M. and Norman, A. and others},
+ author = {Mengel, M. and Norman, A. et. al.},
  title = {Replacing the Engines without Stopping The Train; How A Production Data Handling System was Re-engineered and Replaced without anyone Noticing},
  booktitle = {21st International Conference on Computing in High Energy and Nuclear Physics (CHEP2015)},
  url = {https://indico.cern.ch/event/304944/session/4/contribution/463},
  year = {2015},
 }
 @inproceedings{CHEP2015:ATLASEventService,
- author = {Wenaus, T. and others},
+ author = {Wenaus, T. et. al.},
  title = {The ATLAS Event Service: A new approach to event processing},
  booktitle = {21st International Conference on Computing in High Energy and Nuclear Physics (CHEP2015)},
  url = {https://indico.cern.ch/event/304944/session/4/contribution/463},
  year = {2015},
 }
 @article{1742-6596-513-6-062053,
-  author={M Ernst and R Hogue and C Hollowell and W Strecker-Kellog and A Wong and A Zaytsev},
+  author={Ernst, M. et. al.},
   title={Operating Dedicated Data Centers – Is It Cost-Effective?},
   journal={Journal of Physics: Conference Series},
   volume={513},
@@ -254,7 +248,7 @@ Keahey and Jeff Porter and Justin Stevens and Matt Walker},
   howpublished = {\url{http://osg-docdb.opensciencegrid.org/cgi-bin/ShowDocument?docid=1204}},
 }
 @article{10.1109/MCSE.2014.80,
-author = {John Towns and Timothy Cockerill and Maytal Dahan and Ian Foster and Kelly Gaither and Andrew Grimshaw and Victor Hazlewood and Scott Lathrop and Dave Lifka and Gregory D. Peterson and Ralph Roskies and J. Ray Scott and Nancy Wilkens-Diehr},
+author = {Towns J. et. al.},
 title = {XSEDE: Accelerating Scientific Discovery},
 journal ={Computing in Science and Engineering},
 volume = {16},
@@ -267,7 +261,7 @@ publisher = {IEEE Computer Society},
 address = {Los Alamitos, CA, USA},
 }
 @article{1742-6596-396-5-052013,
-  author={J Blomer and P Buncic and I Charalampidis and A Harutyunyan and D Larsen and and R Meusel},
+  author={Blomer, J. et. al.},
   title={Status and future perspectives of CernVM-FS},
   journal={Journal of Physics: Conference Series},
   volume={396},
@@ -307,7 +301,7 @@ address = {Los Alamitos, CA, USA},
   publisher={Penguin}
 }
 @article{Khachatryan:2015kea,
-      author         = "Khachatryan, Vardan and others",
+      author         = "Khachatryan, V. et. al.",
       title          = "{Measurement of the Zγ Production Cross Section in pp
                         Collisions at 8 TeV and Search for Anomalous Triple Gauge
                         Boson Couplings}",
@@ -338,7 +332,7 @@ address = {Los Alamitos, CA, USA},
   url = {http://link.aps.org/doi/10.1103/PhysRevD.10.2445}
 }
 @ARTICLE{1610988, 
-author={J. Allison and K. Amako and J. Apostolakis and H. Araujo and P. Arce Dubois and M. Asai and G. Barrand and R. Capra and S. Chauvie and R. Chytracek and G. A. P. Cirrone and G. Cooperman and G. Cosmo and G. Cuttone and G. G. Daquino and M. Donszelmann and M. Dressel and G. Folger and F. Foppiano and J. Generowicz and V. Grichine and S. Guatelli and P. Gumplinger and A. Heikkinen and I. Hrivnacova and A. Howard and S. Incerti and V. Ivanchenko and T. Johnson and F. Jones and T. Koi and R. Kokoulin and M. Kossov and H. Kurashige and V. Lara and S. Larsson and F. Lei and O. Link and F. Longo and M. Maire and A. Mantero and B. Mascialino and I. McLaren and P. Mendez Lorenzo and K. Minamimoto and K. Murakami and P. Nieminen and L. Pandola and S. Parlati and L. Peralta and J. Perl and A. Pfeiffer and M. G. Pia and A. Ribon and P. Rodrigues and G. Russo and S. Sadilov and G. Santin and T. Sasaki and D. Smith and N. Starkov and S. Tanaka and E. Tcherniaev and B. Tome and A. Trindade and P. Truscott and L. Urban and M. Verderi and A. Walkden and J. P. Wellisch and D. C. Williams and D. Wright and H. Yoshida}, 
+author={Allison, J. et. al.}, 
 journal={IEEE Transactions on Nuclear Science}, 
 title={Geant4 developments and applications}, 
 year={2006}, 
@@ -360,7 +354,7 @@ note = "",
 issn = "0168-9002",
 doi = "http://dx.doi.org/10.1016/S0168-9002(03)01368-8",
 url = "http://www.sciencedirect.com/science/article/pii/S0168900203013688",
-author = "S. Agostinelli and J. Allison and K. Amako and J. Apostolakis and H. Araujo and P. Arce and M. Asai and D. Axen and S. Banerjee and G. Barrand and F. Behner and L. Bellagamba and J. Boudreau and L. Broglia and A. Brunengo and H. Burkhardt and S. Chauvie and J. Chuma and R. Chytracek and G. Cooperman and G. Cosmo and P. Degtyarenko and A. Dell'Acqua and G. Depaola and D. Dietrich and R. Enami and A. Feliciello and C. Ferguson and H. Fesefeldt and G. Folger and F. Foppiano and A. Forti and S. Garelli and S. Giani and R. Giannitrapani and D. Gibin and J.J. Gómez Cadenas and I. González and G. Gracia Abril and G. Greeniaus and W. Greiner and V. Grichine and A. Grossheim and S. Guatelli and P. Gumplinger and R. Hamatsu and K. Hashimoto and H. Hasui and A. Heikkinen and A. Howard and V. Ivanchenko and A. Johnson and F.W. Jones and J. Kallenbach and N. Kanaya and M. Kawabata and Y. Kawabata and M. Kawaguti and S. Kelner and P. Kent and A. Kimura and T. Kodama and R. Kokoulin and M. Kossov and H. Kurashige and E. Lamanna and T. Lampén and V. Lara and V. Lefebure and F. Lei and M. Liendl and W. Lockman and F. Longo and S. Magni and M. Maire and E. Medernach and K. Minamimoto and P. Mora de Freitas and Y. Morita and K. Murakami and M. Nagamatu and R. Nartallo and P. Nieminen and T. Nishimura and K. Ohtsubo and M. Okamura and S. O'Neale and Y. Oohata and K. Paech and J. Perl and A. Pfeiffer and M.G. Pia and F. Ranjard and A. Rybin and S. Sadilov and E. Di Salvo and G. Santin and T. Sasaki and N. Savvas and Y. Sawada and S. Scherer and S. Sei and V. Sirotenko and D. Smith and N. Starkov and H. Stoecker and J. Sulkimo and M. Takahata and S. Tanaka and E. Tcherniaev and E. Safai Tehrani and M. Tropeano and P. Truscott and H. Uno and L. Urban and P. Urban and M. Verderi and A. Walkden and W. Wander and H. Weber and J.P. Wellisch and T. Wenaus and D.C. Williams and D. Wright and T. Yamada and H. Yoshida and D. Zschiesche",
+author = "Agostinelli, S. et. al.",
 keywords = "Simulation",
 keywords = "Particle interactions",
 keywords = "Geometrical modelling",
@@ -369,7 +363,7 @@ keywords = "Object-oriented technology",
 keywords = "Distributed software development "
 }
 @article{cms_detector,
-      author         = "Chatrchyan, S. and others",
+      author         = "Chatrchyan, S. et. al.",
       title          = "{The CMS experiment at the CERN LHC}",
       collaboration  = "CMS Collaboration",
       journal        = "JINST",
@@ -380,7 +374,7 @@ keywords = "Distributed software development "
       SLACcitation   = "%%CITATION = JINST,3,S08004;%%",
 }
 @article{cms_higgs_discovery, 
-      author         = "Chatrchyan, Serguei and others",
+      author         = "Chatrchyan, Serguei et. al.",
       title          = "{Observation of a new boson at a mass of 125 GeV with the
                         CMS experiment at the LHC}",
       collaboration  = "CMS Collaboration",
@@ -395,8 +389,25 @@ keywords = "Distributed software development "
       reportNumber   = "CMS-HIG-12-028, CERN-PH-EP-2012-220",
       SLACcitation   = "%%CITATION = ARXIV:1207.7235;%%",
 }
+@article{atlas_higgs_discovery,
+      author         = "Aad, G. et. al.",
+      title          = "{Observation of a new particle in the search for the
+                        Standard Model Higgs boson with the ATLAS detector at the
+                        LHC}",
+      collaboration  = "ATLAS",
+      journal        = "Phys. Lett.",
+      volume         = "B716",
+      year           = "2012",
+      pages          = "1-29",
+      doi            = "10.1016/j.physletb.2012.08.020",
+      eprint         = "1207.7214",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CERN-PH-EP-2012-218",
+      SLACcitation   = "%%CITATION = ARXIV:1207.7214;%%"
+}
 @article{Adelman2013raa,
-      author         = "Adelman, J. and others",
+      author         = "Adelman, J. et. al.",
       title          = "{CMS computing operations during run 1}",
       collaboration  = "CMS collaboration",
       journal        = "J.Phys.Conf.Ser.",
