--- a/wsc16paper.tex
+++ b/wsc16paper.tex
@@ -118,13 +118,13 @@ Batavia, IL, 60510, USA\\
 \maketitle
 
 \section*{ABSTRACT}
-The Large Hadron Collider (LHC) at CERN in Geneva, Switzerland, is one of the largest machines on this planet. It is built to smash protons into each other at unprecedented energies to reveal the fundamental constituents of our universe. The 4 detectors at the LHC record multi-petabyte datasets every year. The scientific analysis of this data requires equally large simulation datasets of the collisions based on the theory of particle physics, the Standard Model. The goal is to verify the validity of the Standard Model or of theories that extend the Model like the concepts of Super Symmetry and an explanation of Dark Matter. I will give an overview of the nature of simulations needed to discover new particles like the Higgs boson in 2012, and review the different areas where simulations are indispensable: from the actual recording of the collisions to the extraction of scientific results to the conceptual design of improvements to the LHC and its experiments.
+The Large Hadron Collider (LHC) at CERN in Geneva, Switzerland, is one of the largest machines on this planet. It is built to smash protons into each other at unprecedented energies to reveal the fundamental constituents of our universe. The 4 detectors at the LHC record multi-petabyte datasets every year. The scientific analysis of this data requires equally large simulation datasets of the collisions based on the theory of particle physics, the Standard Model. The goal is to verify the validity of the Standard Model or of theories that extend the Model like the concepts of Supersymmetry and an explanation of Dark Matter. I will give an overview of the nature of simulations needed to discover new particles like the Higgs boson in 2012, and review the different areas where simulations are indispensable: from the actual recording of the collisions to the extraction of scientific results to the conceptual design of improvements to the LHC and its experiments.
 
 \section{INTRODUCTION}
 \label{sec:intro}
 High Energy Physics (HEP) strives to develop a detailed mathematical understanding of nature at the elementary level. It is founded on the interplay between a theoretical framework that describes elementary particles and elementary forces between them, and the experimental detection of particles and measurements of their interactions.
 
-The Standard Model~\shortcite{griffiths2008introduction} contains the current proven and verified knowledge of particle physics and describes the universe through 12 particles and their anti-particles, and 4 fundamental forces represented by force particles~(see Fig.~\ref{fig:sm}). Particles are called fermions and have half-integer spin (1/2, 3/2, 5/2, ...; one of the fundamental properties or quantum numbers of particles) and respect the Pauli exclusion principle (no two particles can be identical in all their quantum numbers). There are 12 fermions, separated into 6 leptons (electron, electron neutrino, muon, muon neutrino, tau, tau neutrino), and 6 quarks (up, down, charm, strange, bottom, top). The hydrogen atom consists of an electron orbiting a proton, which consist of 2 up and 1 down quark.
+The Standard Model~\cite{griffiths2008introduction} contains the current proven and verified knowledge of particle physics and describes the universe through 12 particles and their anti-particles, and 4 fundamental forces represented by force particles~(see Fig.~\ref{fig:sm}). Particles are called fermions and have half-integer spin (1/2, 3/2, 5/2, ...; one of the fundamental properties or quantum numbers of particles) and respect the Pauli exclusion principle (no two particles can be identical in all their quantum numbers). There are 12 fermions, separated into 6 leptons (electron, electron neutrino, muon, muon neutrino, tau, tau neutrino), and 6 quarks (up, down, charm, strange, bottom, top). The hydrogen atom consists of an electron orbiting a proton, which consist of 2 up and 1 down quark.
 
 \begin{figure}[htb]
 {
@@ -135,9 +135,9 @@ The Standard Model~\shortcite{griffiths2008introduction} contains the current pr
 }
 \end{figure}
 
-Force particles are bosons with integer spin and describe the fundamental forces: the electro-magnetic force is represented by the photon, the weak force is represented by the W and Z bosons, the strong force is represented by the gluon. The recently discovered Higgs boson~\shortcite{cms_higgs_discovery} is already regarded part of the Standard Model and completes it by explaining why elementary particles have mass. Gravitation is not included in the Standard Model. It is the least well understood force on an elementary level; the suspected force particle is called the graviton and has not yet been discovered.
+Force particles are bosons with integer spin and describe the fundamental forces: the electro-magnetic force is represented by the photon, the weak force is represented by the W and Z bosons, the strong force is represented by the gluon. The recently discovered Higgs boson~\shortcite{cms_higgs_discovery,atlas_higgs_discovery} is already regarded part of the Standard Model and completes it by explaining why elementary particles have mass. Gravitation is not included in the Standard Model. It is the least well understood force on an elementary level; the suspected force particle is called the graviton and has not yet been discovered.
 
-Today, the Standard Model is very successful in describing matter and their interactions. It took many years and numerous experiments to develop and verify the theory. Although it is self-consistent from the theory point of view, it cannot describe gravitation as mentioned, it cannot account for the accelerating expansion of the universe, and cannot explain neutrinos' masses. Therefore the field of particle physics is very active in trying to understand these and other topics and to improve and enhance the Standard Model.
+Today, the Standard Model is very successful in describing matter and their interactions. It took many years and numerous experiments to develop and verify the theory. Although it is self-consistent from the theory point of view, it cannot describe gravitation as mentioned, it cannot account for the accelerating expansion of the universe, and cannot explain neutrino masses. Therefore the field of particle physics is very active in trying to understand these and other topics and to improve and enhance the Standard Model.
 
 \section{SIMULATION}
 \label{sec:simulation}
@@ -151,7 +151,7 @@ The empirical calculation of a particle interaction is only possible in approxim
 
 Higher order corrections can play a significant role in calculating this collision accurately. There are two kinds of higher order corrections that are important. 
 
-The first is extending the number of particles and force particles that are produced and exchanged between the first and second vertex. In particle physics nomenclature, the number of vertices is increased and therefore the order of the calculation increases. The more orders are calculated, the closer the approximation of the calculation to the truth. The first order described above is called the "leading order (LO)" and the next following orders are called ''next-to-leader order (NLO)'' and ''next-to-next-to-leading order (NNLO)''. NNLO calculations are currently state-of-the-art in particle physics for most processes.
+The first is extending the number of particles and force particles that are produced and exchanged between the first and second vertex. In particle physics nomenclature, the number of vertices is increased and therefore the order of the calculation increases. The more orders are calculated, the closer the approximation of the calculation to the truth. The first order described above is called the "leading order (LO)" and the next following orders are called ''next-to-leading order (NLO)'' and ''next-to-next-to-leading order (NNLO)''. NNLO calculations are currently state-of-the-art in particle physics for most processes.
 
 The second kind of higher order correction can only be approximated because of lack of fundamental understanding of the involved processes. Additional force particles radiated from the incoming or outgoing particles are changing the calculation. As there are many possibilities to radiate extra particles with a wide range of possible kinematical parameters (energy, momentum, etc.), a precise or even mathematical approximation is very difficult. Particle physics uses Monte Carlo techniques to approximate these effects. A sufficiently large number of interactions is calculated starting from a random number seed, where every simulated interaction is using a different seed. The random number is used to determine if and how particles are radiated and included in the calculation. Probability density functions are used to constrain the possibilities of radiating particles. These functions are determined by theory confirmed by experiment or by experiment directly.
 
@@ -162,13 +162,13 @@ A sufficiently large sample set of these simulated interactions allows to make s
 
 To verify or even extend the theory, experiments and the comparison of experimental results with theoretical predictions are needed. The event simulation step described in Sec.~\ref{subsec:eventsimulation} is not directly comparable with measurements of an experimental setup, because only few elementary particles are stable and also detectable in their elementary form.
 
-Of the leptons, only the electron and muon are stable and observable. The tau decays into electrons or muons very quickly and the neutrinos are so weakly interacting that neutrino physics is its own branch in particle physics. 
+Of the leptons, only the electrons are stable and muons live long enough to be observable. The tau decays into electrons or muons very quickly and the neutrinos are so weakly interacting that neutrino physics is its own branch in particle physics. 
 
 The quarks are not observable individually at all. Governed by the strong force and a concept called confinement~\shortcite{PhysRevD.10.2445}, quarks can only be observed in 2- or 3-quark bound states. 3-quark bound states are called baryons and the most prominent examples are protons and neutrons. 2-quark bound states are called mesons. 
 
 We also cannot control the initial state of a particle interaction to all extent. If we collide for example protons with protons, two 3-quark states are colliding, giving multiple possibilities how a quark from the first proton is interacting with a quark form the second proton. Also these effects can be simulated using Monte Carlo techniques.
 
-The same effect that binds quarks in mesons and baryons also governs the constitution of the final state of an interaction. Because individual quarks cannot exist on their own, quarks that are produced in an interaction collect additional quarks from the vacuum (spontaneous quark anti-quark production following $E=mc~2$) or from neighboring quarks in the final state of the interaction. This is called hadronization and is described as well with the help of Monte Carlo techniques using underlying models and theories. The same is true for particles that fragment or decay while transversing a detector material.
+The same effect that binds quarks in mesons and baryons also governs the constitution of the final state of an interaction. Because individual quarks cannot exist on their own, quarks that are produced in an interaction collect additional quarks from the vacuum (spontaneous quark anti-quark production following $E=mc^2$) or from neighboring quarks in the final state of the interaction. This is called hadronization and is described as well with the help of Monte Carlo techniques using underlying models and theories. The same is true for particles that fragment or decay while transversing a detector material.
 
 Detectors are made of matter and detect particles by measuring the interaction of particles with their active material. Detectors can consists of a gas that is ionized by particles, or a plastic that produces light when a particle transverses the material, or a semi-conductor in which a current can be measured when a particle is passing through. In a single simulated event, we know the final state of an interaction. We can track a particle flying through a detector and we can calculate the amount of energy deposited by the particle in the various materials of the detector. We encapsulated all theories and models to describe the energy depositions of particles in material in a single package called Geant~\shortcite{Agostinelli2003250,1610988}, that is used also outside particle physics. Geant simulates the energy deposition of a particle in material, depending on the type of material, the amount of material and the three-dimensional composition of various materials that make up a detector or detector system. 
 
@@ -204,7 +204,7 @@ The Large Hadron Collider (LHC)~\shortcite{1748-0221-3-08-S08001} is the current
 }
 \end{figure}
 
-The CMS collaboration built, maintains and operates the CMS detector~\shortcite{cms_detector}. CMS stands for ''Compact Muon Solenoid'', describing the main feature of the compact architecture of the detector system and the emphasis on muon detection of this 14,000 tons detector. In the innermost layer surrounding the collision region, a silicon pixel detector is detecting charged particle trajectories. Pixel detectors are a three-dimensional array of digital camera CMOS chips specifically manufactured to withstand the high data rates and radiation backgrounds from particle collisions of the LHC. Pixel detectors have a very good spatial resolution, needed to detect individual particles which have not yet separated significantly while traveling outwards after the collision. The pixel tracker is surrounded by a silicon strip tracker which has a coarser resolution but increases the leverage arm of the track reconstruction (forming tracks from individual 3-dimensional hits). Surrounding the tracking systems is the electro-magnetic calorimeter built from lead-tungsten crystals. The crystals are transparent and produce light proportional to the energy of a passing particle. Completing the calorimetry is the hadronic calorimeter, a sandwich of brass and scintillators to stop hadrons and to measure the penetration depth which is proportional to the energy of the hadrons. The tracking and calorimeter systems are surrounded by a superconducting solenoid producing a magnetic field of 3.8T. With its solenoid size of 6 times 13 meters, it is the largest and most powerful magnet of its kind. Completing the CMS detector is the muon detector system surrounding the magnet instrumenting its return yoke. A drawing of the CMS detector is shown in Fig.~\ref{fig:cms}.
+The CMS collaboration built, maintains and operates the CMS detector~\shortcite{cms_detector}. CMS stands for ''Compact Muon Solenoid'', describing the main feature of the compact architecture of the detector system and the emphasis on muon detection of this 14,000 tons detector. In the innermost layer surrounding the collision region, a silicon pixel detector is detecting charged particle trajectories. Pixel detectors are a three-dimensional array of digital camera CMOS chips specifically manufactured to withstand the high data rates and radiation backgrounds from particle collisions of the LHC. Pixel detectors have a very good spatial resolution, needed to detect individual particles which have not yet separated significantly while traveling outwards after the collision. The pixel tracker is surrounded by a silicon strip tracker which has a coarser resolution but increases the leverage arm of the track reconstruction (forming tracks from individual 3-dimensional hits). Surrounding the tracking systems is the electro-magnetic calorimeter built from lead-tungsten crystals. The crystals are transparent and produce light proportional to the energy of a passing particle. Completing the calorimetry is the hadronic calorimeter, a sandwich of brass and scintillators to stop hadrons and to measure the penetration depth which is a measure of the energy of a hadron. The tracking and calorimeter systems are surrounded by a superconducting solenoid producing a magnetic field of 3.8T. With its solenoid size of 6 times 13 meters, it is the largest and most powerful magnet of its kind. Completing the CMS detector is the muon detector system surrounding the magnet instrumenting its return yoke. A drawing of the CMS detector is shown in Fig.~\ref{fig:cms}.
 
 \begin{figure}[htb]
 {
@@ -227,7 +227,7 @@ There are two main thrusts in particle physics, improving the Standard Model and
 
 In all cases the comparison of experimental observation to the deductions of the Standard Model are crucial to find deviations. These deviations can then be interpreted in the context of theoretical models like Dark Matter or Supersymmetry and probabilities can be assigned to deviation being compatible with certain theories.
 
-In the case of the Higgs boson discovery in 2012, theory predicted a number of final states where the new particle was most likely to be discovered. One of them was the 4-lepton final state~\shortcite{cms_higgs_discovery}. Measuring 4-lepton events and identifying and suppressing as much as possible already known interactions predicted by the Standard Model, a peak was discovered that could not be explained by the Standard Model. But adding a Higgs boson with a mass of about 125 GeV allowed the data to be described by the simulation (see Fig.~\ref{fig:higgs}). The statistical significance of the description exceeded 5 sigma and the signal qualified for the discovery of a Higgs boson at 125 GeV. Simulations played a crucial role in this discovery.
+In the case of the Higgs boson discovery in 2012, theory predicted a number of final states where the new particle was most likely to be discovered. One of them was the 4-lepton final state~\shortcite{cms_higgs_discovery}. Measuring 4-lepton events and identifying and suppressing as much as possible already known interactions predicted by the Standard Model, a peak was discovered that could not be explained by the Standard Model. But adding a Higgs boson with a mass of about 125 GeV allowed the data to be described by the simulation (see Fig.~\ref{fig:higgs}). The statistical significance of the description, combining with other channels, exceeded 5 sigma and the signal qualified for the discovery of a Higgs boson at 125 GeV. Simulations played a crucial role in this discovery.
 
 \begin{figure}[htb]
 {
